chore: update deploy con nueva prueba

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: php-app
+          imagePullPolicy: Always
           image: cordonezjolon/php-k8s-app:latest
           ports:
             - containerPort: 80
